# video-capture

./: .gitignore  CMakeLists.txt  build.sh
cmake/: toolchain_config.cmake
include/common/: logger.h
include/common/log/: logger.h
include/common/queue/: mpmc_queue.h  spsc_queue.h
include/media/: ffmpeg_frame_buffer.h  ffmpeg_packet_buffer.h  i_media_buffer.h  media_frame.h  media_packet.h  simple_buffer.h
include/media/decoder/: ffmpeg_decoder.h  i_decoder.h
include/media/encoder/: ffmpeg_encoder.h  i_encoder.h
include/media/puller/: ethernet_capture.h  ffmpeg_puller.h  i_puller.h
include/media/stream/: source_config.h  stream_info.h  stream_session.h  stream_source.h
include/media/stream/jitterbuffer/: adaptive_jitter_buffer.h
src/: main.cpp
src/media/: ffmpeg_frame_buffer.cpp  ffmpeg_packet_buffer.cpp
src/media/decoder/: ffmpeg_decoder.cpp
src/media/encoder/: ffmpeg_encoder.cpp
src/media/puller/: ethernet_capture.cpp  ffmpeg_puller.cpp
src/media/stream/: stream_session.cpp  stream_source.cpp
src/media/stream/jitterbuffer/: adaptive_jitter_buffer.cpp
test/: CMakeLists.txt  test_spdlog.cpp  test_stream_decode.cpp
